testsuite/good/components/test_component_handles_rename/ComponentDeclaration.flux
type ComponentDeclaration {
   void methodAlias();
}
components {
   MyComponent c = MyComponent.new() handles componentMethod() as methodAlias();
}
main {
   ComponentDeclaration cd = ComponentDeclaration.new();
   cd.methodAlias();
}